# CORE                                                                                     #
#   Add here everything which connected to the core: (spells,groups,maps etc..)            #
#                                                                                          #
############################################################################################

~>XX.07.2012:

- Added spells for Fire Elemental Totem and Earth Elemental Totem
- Fix Brambles - hardcoding increased dmg of Treants.
- Fix Elixir of Minor Fortitude
- Fix Warr T8 4p bonus
- Fix DK T8 4p bonus
- PeAI update
- Core/Spells: Fix Rabbit Costume and Noblegarden Bunny
- Core/Spells: Implement SPELL_ATTR4_PROC_ONLY_ON_CASTER properly.
- Fixed Libram of Veracity proc
- Core/Spells: Fix unrelenting assault not proccing aura when overpower is used while target is casting.
- Core/Spells: Fixed Dancing Rune Weapon double-applying the duration bonus of the glyph.
- Core/Spells: Rune Strike should only be available for use once after a block/parry. (Merge to TC (Apr 04, 2012))
- Core/Spells: correctly fix the issue with dispel over time auras.
- Core/Spells: Blade Barrier should not proc from autoattacks.
- Core/Spells: The first target of a chained spell should be explicit.
- Core/Spells: Fixed SPELL_GROUP_STACK_RULE_EXCLUSIVE_SAME_EFFECT on several types of spell effects.
- Core/Spells: attempt to fix penance doing nothing on "friendly" non faction targets. should return invalid targets.
- Core/DB: Adjust AP-bonuses for Hunter Volley (thanks to Jildor).
- Core/Spells: Correct diminishing returns for Horror category.
- Fix Restore pet loading.

~>09.07.2012:

- Merge to TC (Game/WorldSocket).
- Core/Movement: Fix pushback issues and client freeze.
- Fix Flare and Death Grip.
- Fix rocket boots.
- Merge to TC (Game/Warden).
- Core/Visibility: Change the default visibility distance for instances and battlegrounds to blizz-like values.
- Core/MapManager: Fix logic in SetMapUpdateInterval()